clash/src/policy/snapshots/clash__policy__error__tests__error_compile_invalid_glob.snap
---
source: clash/src/policy/error.rs
expression: "format!(\"{err}\")"
---
invalid glob pattern '[invalid': regex parse error:
    [invalid
    ^
error: unclosed character class
